Jouko-api-spec 0.11
