# jaxrs-spec-generated/src/main/java/fi/metatavu/jouko/server/rest/model/InterruptionGroup.java
@@ -14,6 +14,8 @@ public class InterruptionGroup   {
   private @Valid Long id = null;
   private @Valid OffsetDateTime startTime = null;
   private @Valid OffsetDateTime endTime = null;
+  private @Valid Double overbookingFactor = null;
+  private @Valid Long powerSavingGoalInWatts = null;
 
   /**
    * Interruption id
@@ -69,6 +71,40 @@ public class InterruptionGroup   {
     this.endTime = endTime;
   }
 
+  /**
+   * Overbooking factor
+   **/
+  public InterruptionGroup overbookingFactor(Double overbookingFactor) {
+    this.overbookingFactor = overbookingFactor;
+    return this;
+  }
+
+  
+  @ApiModelProperty(value = "Overbooking factor")
+  public Double getOverbookingFactor() {
+    return overbookingFactor;
+  }
+  public void setOverbookingFactor(Double overbookingFactor) {
+    this.overbookingFactor = overbookingFactor;
+  }
+
+  /**
+   * The amount of power this interruption is supposed to save, in watts
+   **/
+  public InterruptionGroup powerSavingGoalInWatts(Long powerSavingGoalInWatts) {
+    this.powerSavingGoalInWatts = powerSavingGoalInWatts;
+    return this;
+  }
+
+  
+  @ApiModelProperty(value = "The amount of power this interruption is supposed to save, in watts")
+  public Long getPowerSavingGoalInWatts() {
+    return powerSavingGoalInWatts;
+  }
+  public void setPowerSavingGoalInWatts(Long powerSavingGoalInWatts) {
+    this.powerSavingGoalInWatts = powerSavingGoalInWatts;
+  }
+
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -81,12 +117,14 @@ public class InterruptionGroup   {
     InterruptionGroup interruptionGroup = (InterruptionGroup) o;
     return Objects.equals(id, interruptionGroup.id) &&
         Objects.equals(startTime, interruptionGroup.startTime) &&
-        Objects.equals(endTime, interruptionGroup.endTime);
+        Objects.equals(endTime, interruptionGroup.endTime) &&
+        Objects.equals(overbookingFactor, interruptionGroup.overbookingFactor) &&
+        Objects.equals(powerSavingGoalInWatts, interruptionGroup.powerSavingGoalInWatts);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(id, startTime, endTime);
+    return Objects.hash(id, startTime, endTime, overbookingFactor, powerSavingGoalInWatts);
   }
 
   @Override
@@ -97,6 +135,8 @@ public class InterruptionGroup   {
     sb.append("    id: ").append(toIndentedString(id)).append("\n");
     sb.append("    startTime: ").append(toIndentedString(startTime)).append("\n");
     sb.append("    endTime: ").append(toIndentedString(endTime)).append("\n");
+    sb.append("    overbookingFactor: ").append(toIndentedString(overbookingFactor)).append("\n");
+    sb.append("    powerSavingGoalInWatts: ").append(toIndentedString(powerSavingGoalInWatts)).append("\n");
     sb.append("}");
     return sb.toString();
   }
